[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/SettingsPanel.gd" id="1"]

[node name="SettingsPanel" type="Control"]
anchor_right = 0.35
anchor_bottom = 0.6
script = ExtResource("1")
visible = false

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 16
custom_constants/margin_top = 16
custom_constants/margin_right = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
size_flags_vertical = 3
separation = 12

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Settings"

[node name="DifficultyRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
size_flags_horizontal = 3

[node name="DifficultyLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/DifficultyRow"]
text = "Difficulty"
size_flags_horizontal = 1

[node name="DifficultyOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/DifficultyRow"]
size_flags_horizontal = 3

[node name="CrowdRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
size_flags_horizontal = 3

[node name="CrowdLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/CrowdRow"]
text = "Crowd"
size_flags_horizontal = 1

[node name="CrowdSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/CrowdRow"]
size_flags_horizontal = 3
min_value = 1.0
max_value = 30.0
step = 1.0
value = 10.0

[node name="FullscreenRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
size_flags_horizontal = 3

[node name="FullscreenLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/FullscreenRow"]
text = "Fullscreen"
size_flags_horizontal = 1

[node name="FullscreenCheckBox" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/FullscreenRow"]
text = "Enabled"
size_flags_horizontal = 3
